--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "sanity-remix-template",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "npm run clean && remix build",
     "dev": "remix dev",
+    "start": "remix-serve ./build",
     "lint": "eslint . --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf -rf ./.cache ./build ./public/build"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.0",
@@ -46,6 +48,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
